# telegram-cloud-android

./: .gitignore  .gitmodules  .instrucctions.md  CHANGELOG.md  GUIA_SUBIR_GITHUB.md  LICENSE  README.md  REQUISITOS_WINDOWS.md  build-complete.ps1  build-complete.sh  metadata.yml  plan.md  subir_a_github.ps1
android/: build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/telegram/cloud/: MainActivity.kt  NativeLib.kt  TelegramCloudApp.kt
android/app/src/main/java/com/telegram/cloud/data/: SQLCipherDatabase.kt
android/app/src/main/java/com/telegram/cloud/data/backup/: BackupManager.kt
android/app/src/main/java/com/telegram/cloud/data/batch/: BatchOperationsManager.kt  MultiFileDashboardManager.kt
android/app/src/main/java/com/telegram/cloud/data/local/: CloudEntities.kt
android/app/src/main/java/com/telegram/cloud/data/prefs/: ConfigStore.kt
android/app/src/main/java/com/telegram/cloud/data/remote/: ChunkedDownloadManager.kt  ChunkedUploadManager.kt  TelegramBotClient.kt
android/app/src/main/java/com/telegram/cloud/data/repository/: TelegramRepository.kt
android/app/src/main/java/com/telegram/cloud/data/share/: LinkDownloadManager.kt  MultiLinkDownloadManager.kt  MultiLinkGenerator.kt  ShareLinkManager.kt
android/app/src/main/java/com/telegram/cloud/di/: AppContainer.kt
android/app/src/main/java/com/telegram/cloud/domain/model/: Models.kt
android/app/src/main/java/com/telegram/cloud/gallery/: CloudGalleryScreen.kt  DownloadWorker.kt  GalleryAlbum.kt  GalleryEntities.kt  GalleryRestoreManager.kt  GalleryRestoreWorker.kt  GallerySyncManager.kt  GallerySyncWorker.kt  GalleryViewModel.kt  MediaContextMenu.kt  MediaScanner.kt  MediaViewerScreen.kt  MultiFileGalleryManager.kt  SelectionActionBar.kt  SyncNotificationManager.kt  SyncNotificationReceiver.kt  UploadWorker.kt  ZoomableImage.kt
android/app/src/main/java/com/telegram/cloud/gallery/streaming/: ChunkedStreamingManager.kt  ChunkedVideoPlayer.kt  VideoPlayerComposable.kt
android/app/src/main/java/com/telegram/cloud/service/: ProgressNotificationManager.kt
android/app/src/main/java/com/telegram/cloud/tasks/: TaskItem.kt  TaskQueue.kt  TaskQueueManager.kt  TaskQueueScreen.kt
android/app/src/main/java/com/telegram/cloud/ui/: MainViewModel.kt
android/app/src/main/java/com/telegram/cloud/ui/components/: InteractiveComponents.kt  LoadingStates.kt  Shimmer.kt
android/app/src/main/java/com/telegram/cloud/ui/navigation/: Transitions.kt
android/app/src/main/java/com/telegram/cloud/ui/progress/: ProgressTracker.kt
android/app/src/main/java/com/telegram/cloud/ui/screen/: DashboardScreen.kt  SetupScreen.kt  SplashScreen.kt
android/app/src/main/java/com/telegram/cloud/ui/theme/: Elevation.kt  Spacing.kt  Theme.kt  Typography.kt
android/app/src/main/java/com/telegram/cloud/ui/utils/: HapticFeedback.kt
android/app/src/main/java/com/telegram/cloud/utils/: ChunkedStreamingRegistry.kt  MediaStoreUtils.kt  ResourceGuard.kt  StoragePaths.kt
android/app/src/main/res/animator/: arrow_rotate.xml
android/app/src/main/res/drawable/: avd_arrow_rotate.xml  ic_arrow_up.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/mipmap/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/res/animator/: arrow_rotate.xml
docs/: ACTUALIZACION_SCRIPTS.md  BUILD_ARCHITECTURE.md  BUILD_NATIVE_DEPENDENCIES.md  CAMBIOS_REALIZADOS.md  ESTRUCTURA_NUEVA.md  ESTRUCTURA_REPOSITORIO.md  FDROID_COMPLIANCE.md  RESUMEN_CAMBIOS.md
scripts/powershell/: build-complete.ps1  check-requirements.ps1  setup-dependencies.ps1
scripts/shell/: build-complete.sh  setup-dependencies.sh
telegram-cloud-cpp/: .gitignore  CMakeLists.desktop.txt  CMakeLists.txt  README-android.md  env_template.txt
telegram-cloud-cpp/android_jni/: native_interface.cpp  telegram_cloud_jni_wrapper.cpp
telegram-cloud-cpp/include/: advobf_helper.h  anti_debug.h  apiserver.h  backupmanager.h  batchoperations.h  chunkeddownload.h  chunkedupload.h  config.h  database.h  distributed_validation.h  downloadstatemanager.h  envmanager.h  filedownloader.h  fileuploader.h  helpdialog.h  integrity_validation.h  linkdownloadmanager.h  logger.h  mainwindow.h  obfuscated_strings.h  string_obfuscation.h  telegramhandler.h  telegramnotifier.h  tempdownloaddb.h  universallinkdownloader.h  universallinkgenerator.h  uploadprogressmanager.h  uploadstatemanager.h
telegram-cloud-cpp/resources/: app.rc
telegram-cloud-cpp/src/: backupmanager.cpp  batchoperations.cpp  batchoperations.cpp.checksum  chunkeddownload.cpp  chunkedupload.cpp  chunkedupload.cpp.checksum  config.cpp  config.cpp.checksum  config.cpp.validation  database.cpp  database.cpp.checksum  downloadstatemanager.cpp  envmanager.cpp  filedownloader.cpp  filedownloader.cpp.checksum  filedownloader.cpp.validation  fileuploader.cpp  fileuploader.cpp.checksum  helpdialog.cpp  linkdownloadmanager.cpp  logger.cpp  logger.cpp.checksum  main.cpp  mainwindow.cpp  mainwindow_corrupt.cpp  obfuscated_strings.cpp  obfuscated_strings_android.cpp  telegramhandler.cpp  telegramhandler.cpp.checksum  telegramhandler.cpp.validation  telegramnotifier.cpp  tempdownloaddb.cpp  universallinkdownloader.cpp  universallinkgenerator.cpp  uploadstatemanager.cpp
